src/objects/ICG_Capability_Configuration__mdt.object
<CustomObject>
    <description>One Source Capability Configuration</description>
    <fields>
        <fullName>Data__c</fullName>
        <description>Capabilities&apos; data separated by ;.</description>
        <label>Data</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra_Data__c</fullName>
        <description>Extra data to be searched.</description>
        <label>Extra Data</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>Language key. e.g: en_US</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Represents the order to show up items.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Types of capability configutarions.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fields_By_Record_Type_And_Category</fullName>
                    <label>Fields By Record Type And Category</label>
                </value>
                <value>
                    <fullName>Grouped_Fields</fullName>
                    <label>Grouped Fields</label>
                </value>
                <value>
                    <fullName>Categories_By_Record_Type</fullName>
                    <label>Categories By Record Type</label>
                </value>
                <value>
                    <fullName>Record_Types_By_Section</fullName>
                    <label>Record Types By Section</label>
                </value>
                <value>
                    <fullName>Categories_By_Account_Role_Detail_Record_Type</fullName>
                    <label>Categories By Account Role Detail Record Type</label>
                </value>
                <value>
                    <fullName>Specific_Processing</fullName>
                    <label>Specific Processing</label>
                </value>
                <value>
                    <fullName>Tooltip_Fields_By_Field</fullName>
                    <label>Tooltip Fields By Field</label>
                </value>
                <value>
                    <fullName>Sections_By_Supercategory</fullName>
                </value>
                <value>
                    <fullName>Config</fullName>
                </value>
                <value>
                    <fullName>Editable_RecordTypes</fullName>
                </value>
                <value>
                    <fullName>RecordTypes_AccountRoleDetail</fullName>
                </value>
                <value>
                    <fullName>Scopes_by_AccRoleDet_RT</fullName>
                    <label>Scopes by AccRoleDet RT</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>OS Capability Configuration</label>
    <listViews>
        <fullName>Categories_By_Account_Role_Detail_Record_Type</fullName>
        <columns>MasterLabel</columns>
        <columns>Order__c</columns>
        <columns>Type__c</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Categories_By_Account_Role_Detail_Record_Type</value>
        </filters>
        <label>L2 -Categories By Account Role Detail Rt</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Categories_By_Record_Type</fullName>
        <columns>DeveloperName</columns>
        <columns>Order__c</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Categories_By_Record_Type</value>
        </filters>
        <label>L2 - Categories By Record Type</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EXTRA_Editables_RecordTypes</fullName>
        <columns>DeveloperName</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Editable_RecordTypes</value>
        </filters>
        <label>EXTRA - Editables RecordTypes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EXTRA_RecordTypes_AccountRoleDetail</fullName>
        <columns>MasterLabel</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>RecordTypes_AccountRoleDetail</value>
        </filters>
        <label>EXTRA - RecordTypes_AccountRoleDetail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EXTRA_Scopes_by_AccRoleDet_RT</fullName>
        <columns>MasterLabel</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Scopes_by_AccRoleDet_RT</value>
        </filters>
        <label>EXTRA - Scopes by AccRoleDet RT</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Extra_Config</fullName>
        <columns>DeveloperName</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Config</value>
        </filters>
        <label>EXTRA - Config</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Fields_By_Record_Type_And_Category</fullName>
        <columns>DeveloperName</columns>
        <columns>Order__c</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Fields_By_Record_Type_And_Category</value>
        </filters>
        <label>L3 - Fields By Record Type And Category</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Grouped_Fields</fullName>
        <columns>DeveloperName</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Grouped_Fields</value>
        </filters>
        <label>EXTRA - Grouped Fields</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Record_Types_By_Section</fullName>
        <columns>DeveloperName</columns>
        <columns>Order__c</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Record_Types_By_Section</value>
        </filters>
        <label>L1 - Record Types By Section</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sections_by_Supercategory</fullName>
        <columns>DeveloperName</columns>
        <columns>Order__c</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Sections_By_Supercategory</value>
        </filters>
        <label>L0 - Sections by Supercategory</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Specific_Processing</fullName>
        <columns>DeveloperName</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Specific_Processing</value>
        </filters>
        <label>EXTRA - Specific Processing</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Tooltip_Fields_By_Field</fullName>
        <columns>DeveloperName</columns>
        <columns>Key__c</columns>
        <columns>Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Tooltip_Fields_By_Field</value>
        </filters>
        <label>EXTRA - Tooltip Fields By Field</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>OS Capability Configuration</pluralLabel>
</CustomObject>